Bug 1525341 - RTP audio jitter stat is not updating r=dminor a=lizzard

RTP audio jitter stat is not updating because the playout frequency isn't being set

Differential Revision: https://phabricator.services.mozilla.com/D20530